--- a/templates/why-penwise.html
+++ b/templates/why-penwise.html
@@ -278,7 +278,7 @@
 </section>
 <!-- From Idea to Published Novel in 3 easy steps Section  -->
 <section
-  class="bg-[url('/assets/image/step/hero.png')] bg-cover bg-center relative py-16 md:py-24 bg-black overflow-hidden"
+  class="bg-[url('/static/assets/image/step/hero.png')] bg-cover bg-center relative py-16 md:py-24 bg-black overflow-hidden"
 >
   <!-- Starry Background Pattern -->
   <div
