--- a/templates/includes/dashboard_sidebar.html
+++ b/templates/includes/dashboard_sidebar.html
@@ -12,7 +12,7 @@
 " class="fixed inset-0 bg-black/50 z-40 lg:hidden hidden transition-opacity duration-300"></div>
 
 <!-- Dashboard Sidebar -->
-<aside id="dashboardSidebar" class="fixed left-0 top-0 h-full w-64 bg-white border-r border-gray-200 z-50 flex flex-col transform -translate-x-full lg:translate-x-0 transition-transform duration-300">
+<aside id="dashboardSidebar" class="fixed left-6 top-6 h-full w-64 rounded-[16px] bg-[#F9F9FB] border border-[#E4E8EF] z-50 flex flex-col transform -translate-x-full lg:translate-x-0 transition-transform duration-300" style="left: 1.5rem; top: 1.5rem;">
   <!-- Logo Section -->
   <div class="flex items-center justify-between p-6 border-b border-gray-200">
     <div class="flex items-center gap-2">
