style: dashboard layout done

--- a/templates/dashboard_base.html
+++ b/templates/dashboard_base.html
@@ -26,7 +26,7 @@
   </head>
 
   <body class="font-sans antialiased bg-white p-6">
-    {% include 'includes/dashboard_sidebar.html' with active_page=active_page|default:'dashboard' %}
+    {% include 'includes/dashboard_sidebar.html' with active_page=active_page %}
     
     <!-- Main Content Area -->
     <main class="lg:ml-64 pb-8 px-4 lg:px-6 min-h-screen">
