style: responsive done

--- a/templates/dashboard_base.html
+++ b/templates/dashboard_base.html
@@ -25,7 +25,7 @@
     {% block extra_css %}{% endblock %}
   </head>
 
-  <body class="font-sans antialiased bg-white p-6">
+  <body class="font-sans antialiased bg-white lg:p-6">
     {% include 'includes/dashboard_sidebar.html' with active_page=active_page %}
     
     <!-- Main Content Area -->
