feat: 6 process linked and applied

--- a/templates/includes/dashboard_sidebar.html
+++ b/templates/includes/dashboard_sidebar.html
@@ -38,7 +38,7 @@
         </a>
       </li>
       <li>
-        <a href="/new-project" class="text-xs lg:text-base relative after:content-[''] after:absolute after:bottom-2 after:left-full after:w-1 after:lg:h-6 after:h-4 after:bg-black after:rounded-r-full after:opacity-0 flex items-center gap-3 lg:px-4 px-2 lg:py-2 py-1.5 rounded-lg transition-colors {% if active_page == 'new-project' %}after:opacity-100 bg-white text-black border border-[#E4E8EF]{% else %}text-gray-800 hover:bg-gray-100 hover:after:opacity-100{% endif %}">
+        <a href="/new-projects/1/" class="text-xs lg:text-base relative after:content-[''] after:absolute after:bottom-2 after:left-full after:w-1 after:lg:h-6 after:h-4 after:bg-black after:rounded-r-full after:opacity-0 flex items-center gap-3 lg:px-4 px-2 lg:py-2 py-1.5 rounded-lg transition-colors {% if active_page == 'new-project' %}after:opacity-100 bg-white text-black border border-[#E4E8EF]{% else %}text-gray-800 hover:bg-gray-100 hover:after:opacity-100{% endif %}">
           <svg class="size-4 lg:size-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
           </svg>
